force-app/main/default/objects/System_Request__c/System_Request__c.object-meta.xml
<CustomObject>
    <label>System Request</label>
    <nameField>
        <label>Code Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>