force-app/main/default/objects/System_Request__c/fields/Case_Type_Delete__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_Delete__c</fullName>
    <label>Case Type Delete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>