force-app/main/default/objects/System_Request__c/fields/Deployed_Date__c.field-meta.xml
<CustomField>
    <fullName>Deployed_Date__c</fullName>
    <label>Deployed Date</label>
    <type>Date</type>
</CustomField>