force-app/main/default/objects/System_Request__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <label>Developer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Developer</valueSetName>
    </valueSet>
</CustomField>