force-app/main/default/objects/System_Request__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Estimate</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>