force-app/main/default/objects/System_Request__c/fields/Estimated_Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_to_Complete__c</fullName>
    <label>Estimated Time to Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>