force-app/main/default/objects/System_Request__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>