force-app/main/default/objects/System_Request__c/fields/Projected_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Production_Date__c</fullName>
    <inlineHelpText>Production Deployments occur on Tuesday&apos;s</inlineHelpText>
    <label>Projected Production Date</label>
    <type>Date</type>
</CustomField>