force-app/main/default/objects/System_Request__c/fields/Release_Notes_Description__c.field-meta.xml
<CustomField>
    <fullName>Release_Notes_Description__c</fullName>
    <label>Release Notes Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>