force-app/main/default/objects/System_Request__c/fields/Screen_Feature__c.field-meta.xml
<CustomField>
    <fullName>Screen_Feature__c</fullName>
    <label>Screen/Feature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Screen_Feature</valueSetName>
    </valueSet>
</CustomField>