force-app/main/default/objects/System_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Ready for Dev&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>More Info Requested</fullName>
            </value>
            <value>
                <fullName>Estimate Requested</fullName>
            </value>
            <value>
                <fullName>Estimate Complete</fullName>
            </value>
            <value>
                <fullName>Ready for Dev</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Test - Failed</fullName>
            </value>
            <value>
                <fullName>Test - Passed</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Platform Limitation - Not Possible</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>