force-app/main/default/objects/System_Request__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Affiliate/Salesforce</fullName>
            </value>
            <value>
                <fullName>Affiliate Portal</fullName>
            </value>
            <value>
                <fullName>Member Portal</fullName>
            </value>
            <value>
                <fullName>Portals Only</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>