force-app/main/default/objects/System_Request__c/fields/Test_Cases_Scenarios__c.field-meta.xml
<CustomField>
    <fullName>Test_Cases_Scenarios__c</fullName>
    <label>Test Cases/Scenarios</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>