force-app/main/default/objects/System_Request__c/fields/Test_Results__c.field-meta.xml
<CustomField>
    <fullName>Test_Results__c</fullName>
    <label>Test Results</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>