force-app/main/default/objects/System_Request__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <label>Total Time</label>
    <summarizedField>Time_Entry__c.Duration__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.System_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>