force-app/main/default/objects/System_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Screen_Feature__c</columns>
    <columns>Priority__c</columns>
    <columns>Projected_Production_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Developer__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>