force-app/main/default/objects/System_Request__c/listViews/Estimate_Requested.listView-meta.xml
<ListView>
    <fullName>Estimate_Requested</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Screen_Feature__c</columns>
    <columns>Priority__c</columns>
    <columns>Projected_Production_Date__c</columns>
    <columns>Estimate__c</columns>
    <columns>Status__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Estimate Requested</value>
    </filters>
    <label>Estimate Requested</label>
</ListView>