force-app/main/default/objects/System_Request__c/listViews/Next_Release_2_21.listView-meta.xml
<ListView>
    <fullName>Next_Release_2_21</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Screen_Feature__c</columns>
    <columns>Priority__c</columns>
    <columns>Projected_Production_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deployed_Date__c</field>
        <operation>equals</operation>
        <value>10/10/2023</value>
    </filters>
    <label>Next Release 3/14</label>
</ListView>