force-app/main/default/objects/System_Request__c/listViews/Open_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>System__c</columns>
    <columns>Screen_Feature__c</columns>
    <columns>Priority__c</columns>
    <columns>Projected_Production_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed,Closed - Not Possible</value>
    </filters>
    <label>Open Requests</label>
</ListView>